<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/nothing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/default_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_default_menu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/default_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:text="@string/no_menu" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.Guideline
                android:id="@+id/guideVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideV1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideV2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideV3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="96dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="24dp"/>

            <android.support.constraint.Guideline
                android:id="@+id/guideH2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="70dp"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/guideH1"
                app:layout_constraintBottom_toBottomOf="@+id/guideH2"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                tools:text="2018.10.13" />

            <TextView
                android:id="@+id/weeklyMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/guideH1"
                app:layout_constraintBottom_toBottomOf="@+id/guideH2"
                app:layout_constraintRight_toRightOf="@+id/guideV2"
                android:clickable="true"
                android:textColor="@color/default_textview_selector"
                android:text="@string/week_menu"/>


            <View
                android:id="@+id/vLine1"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                app:layout_constraintTop_toTopOf="@+id/guideH2"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                app:layout_constraintRight_toRightOf="@+id/guideV2"
                android:background="@color/split_border"
                />

            <!-- 점심 메뉴 태그 -->

            <TextView
                android:id="@+id/lunchTag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/guideH2"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                android:layout_marginTop="16dp"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:text="@string/lunch"
                tools:text="점심"/>

            <TextView
                android:id="@+id/riceTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lunchTag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoTextTop"
                android:text="@string/rice"/>

            <TextView
                android:id="@+id/soupTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/riceTag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/soup"/>

            <TextView
                android:id="@+id/side1Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/soupTag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side1"/>

            <TextView
                android:id="@+id/side2Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side1Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side2"/>

            <TextView
                android:id="@+id/side3Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side2Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side3"/>

            <TextView
                android:id="@+id/side4Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side3Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side4"/>

            <TextView
                android:id="@+id/side5Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side4Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side5"/>

            <TextView
                android:id="@+id/side6Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side5Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side6"/>

            <TextView
                android:id="@+id/side7Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side6Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side7"/>

            <TextView
                android:id="@+id/side8Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side7Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/side8"/>

            <TextView
                android:id="@+id/dessert1Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side8Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/dessert1"/>

            <TextView
                android:id="@+id/dessert2Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dessert1Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV1"
                style="@style/MenuInfoText"
                android:text="@string/dessert2"/>

            <!-- 점심 메뉴 -->

            <TextView
                android:id="@+id/rice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lunchTag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoTextTop"
                android:text="백미밥/흑미밥"
                tools:text="백미밥/흑미밥"/>

            <TextView
                android:id="@+id/soup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/riceTag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="설렁탕"
                tools:text="설렁탕"/>

            <TextView
                android:id="@+id/side1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/soupTag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="제육김치볶음/찐두부"
                tools:text="제육김치볶음/찐두부"/>

            <TextView
                android:id="@+id/side2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side1Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="생선까스"
                tools:text="생선까스"/>

            <TextView
                android:id="@+id/side3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side2Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="생선까스"
                tools:text="생선까스"/>

            <TextView
                android:id="@+id/side4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side3Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="건파래볶음"
                tools:text="건파래볶음"/>

            <TextView
                android:id="@+id/side5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side4Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="오이생채"
                tools:text="오이생채"/>

            <TextView
                android:id="@+id/side6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side5Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="석박지"
                tools:text="석박지"/>

            <TextView
                android:id="@+id/side7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side6Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="떡볶이"
                tools:text="떡볶이"/>

            <TextView
                android:id="@+id/side8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side7Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="고구마맛탕"
                tools:text="고구마맛탕"/>

            <TextView
                android:id="@+id/dessert1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/side8Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="식혜"
                tools:text="식혜"/>

            <TextView
                android:id="@+id/dessert2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/dessert1Tag"
                app:layout_constraintLeft_toLeftOf="@+id/guideV3"
                style="@style/MenuInfoText"
                android:text="탄산음료/숭늉"
                tools:text="탄산음료/숭늉"/>

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>


</android.support.v4.widget.NestedScrollView>