<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.Guideline
            android:id="@+id/guideH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="150dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="206dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="306dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideH4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="356dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideH5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="416dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideH6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="476dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideH7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="536dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userId"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/split_border"
            android:src="@mipmap/ic_launcher_round"
            tools:src="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/userImage"
            app:layout_constraintBottom_toBottomOf="@+id/guideH1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:text="@string/app_name"
            tools:text="@string/app_name"/>

        <FrameLayout
            android:id="@+id/loginView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH1"
            app:layout_constraintBottom_toBottomOf="@+id/guideH2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/kakao_color"
                android:textColor="@color/kakao_text_color"
                android:text="@string/kakao_login"
                tools:text="@string/kakao_login"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1dp"
                android:background="@color/kakao_color"
                android:visibility="invisible"
                android:textColor="@color/kakao_text_color"
                android:text="@string/logout"
                tools:text="@string/logout"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#D6D1D5"
                android:layout_gravity="top"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="#D6D1D5"
                android:layout_gravity="bottom"/>

        </FrameLayout>

        <Button
            android:id="@+id/btnFavorite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH2"
            app:layout_constraintBottom_toBottomOf="@+id/guideH3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnReview"
            style="@style/NavigationSquareMenu"
            android:drawableTop="@drawable/ic_heart_color"
            android:text="@string/favorite"
            tools:text="@string/favorite"/>

        <Button
            android:id="@+id/btnReview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH2"
            app:layout_constraintBottom_toBottomOf="@+id/guideH3"
            app:layout_constraintLeft_toRightOf="@+id/btnFavorite"
            app:layout_constraintRight_toLeftOf="@+id/btnSettings"
            style="@style/NavigationSquareMenu"
            android:drawableTop="@drawable/ic_chat_color"
            android:text="@string/review_manage"
            tools:text="@string/review_manage"/>

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH2"
            app:layout_constraintBottom_toBottomOf="@+id/guideH3"
            app:layout_constraintLeft_toRightOf="@+id/btnReview"
            app:layout_constraintRight_toRightOf="parent"
            style="@style/NavigationSquareMenu"
            android:drawableTop="@drawable/ic_settings_color"
            android:text="@string/setting"
            tools:text="@string/setting" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D6D1D5"
            app:layout_constraintBottom_toBottomOf="@+id/guideH3"/>

        <ImageView
            android:id="@+id/btnBottomAdvertising"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@mipmap/bottom_advertising"
            app:layout_constraintTop_toTopOf="@+id/guideH3"
            app:layout_constraintBottom_toBottomOf="@+id/guideH4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/advertising_image_view" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/noticeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH4"
            app:layout_constraintBottom_toBottomOf="@+id/guideH5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/navigation_basic_menu_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/notice"
                tools:text="@string/notice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="#B7B7B7"
                android:text=">"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#E5E3E3"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/adRequireView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH5"
            app:layout_constraintBottom_toBottomOf="@+id/guideH6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/navigation_basic_menu_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/advertise_require"
                tools:text="@string/advertise_require"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="#B7B7B7"
                android:text=">"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#E5E3E3"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/developerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideH6"
            app:layout_constraintBottom_toBottomOf="@+id/guideH7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/navigation_basic_menu_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/developer_info"
                tools:text="@string/developer_info"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="#B7B7B7"
                android:text=">"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="#E5E3E3"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/guideH7"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@android:color/black"
            android:text="@string/developer"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>